2011-02-25  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm (WIN_image, WIN_filled_polygon) src/win/wgraph.c
	drawgraph: W_boxfill, W_pm3d_setcolor, W_pm3d_filled_polygon, 
	W_image): support transparency and alpha channel for boxes, images
	and polygons. Use memory bitmaps to draw and then use AlphaBlend()
	and TransparentBlt() to copy to the screen. Fix clipping of images.

	* config/makefile.mgw(LDLIBS): additional GDI library file

	* docs/gnuplot.doc: update `set style fill transparent`

	* term/win.trm: update and reformat windows help text

2011-02-24  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc:  sync to docs version 1.651

2011-02-24  Peter Hedwig <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua term/lua.trm:  Make full bitmap
	support conditional on HAVE_CAIROPDF.  Necessary in order to
	build lua without the cairo terminals.

2011-02-24  Hans-Bernhard Broeker <broeker@physik.rwth-aachen.de>

	* share/LaTeX/Makefile.am (${lua_files}): Missing $(top_srcdir)
	broke out-of-source-tree build.

2011-02-23  Ethan A Merritt  <merritt@u.washington.edu>

	* term/lua/gnuplot-tikz.lua term/lua/gnuplot-tikz.help:
	Fix redundant definitions that broke TeX-based documentation.

	* term/Makefile.am.in: Regenerate term/lua/gnuplot-tikz.help

2011-02-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: correct typos; revive some "html" anchors

2011-02-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* docs/gnuplot.doc: add link from `rand` to `random` and use
	proper table format in random section

	* term/lua/gnuplot-tikz.help term/lua/gnuplot-tikz.lua: balance
	backquotes in gnuplot help.

	* src/win/wgraph.c: reorder entries of the graph popup menu

	* src/win/winmain.c(IsWindowsXPorLater) src/win/wcommon.h: add a
	function to detect if gnuplot is running on Win XP or later.

	* src/win/wtext.c(TextMakeFont) src/win/wgraph.c(Makefonts):
	select ClearType or Proof quality depending on OS version to
	improve rendering quality
